--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RE02”,
+  "name": "RE02",
   "version": "1.0.0",
   "description": "Example ReactJS application",
   "main": "src/server/index.js",
@@ -12,13 +12,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/JeffRisberg/RE02”
+    "url": "https://github.com/JeffRisberg/RE02"
   },
   "license": "MIT",
   "dependencies": {
     "debug": "^2.1.3",
     "express": "^4.12.3",
-    "react": "^0.13.1"
+    "react": "^0.13.3"
   },
   "devDependencies": {
     "babel": "^5.0.12",
