--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "body-parser": "^1.4.3",
-    "express": "^4.13.1"
+    "express": "^4.13.1",
+    "moment": "^2.12.0"
   },
   "devDependencies": {}
 }
