updated to React 15.4

--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "scripts": {
     "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JeffRisberg/RE02"
+  },
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
